--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,10 +27,16 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Build and Push Docker Image
-        uses: mr-smithers-excellent/docker-build-push@v4
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          image: ujjwal013/jaxrs-app
-          registry: docker.io
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build Docker images (latest + version)
+        run: |
+          docker build -t ${{ vars.DOCKERHUB_USERNAME }}:latest
+
+      - name: Push Docker images (latest + version)
+        run: |
+          docker push ${{ vars.DOCKERHUB_USERNAME }}:latest
