--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,13 +30,13 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: dockerUser
+          password: fgfdhjgdjkyd63253
 
       - name: Build Docker images (latest + version)
         run: |
-          docker build -t ${{ vars.DOCKERHUB_USERNAME }}:latest
+          docker build -t dockerUser:latest
 
       - name: Push Docker images (latest + version)
         run: |
-          docker push ${{ vars.DOCKERHUB_USERNAME }}:latest
+          docker push dockerUser:latest
