--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,13 +30,13 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: dockerUser
-          password: fgfdhjgdjkyd63253
+          username: ujjwal013
+          password: dckr_pat_HtgA1KBsYH-ELj8Dk_lUX6RGxh0
 
       - name: Build Docker images (latest + version)
         run: |
-          docker build -t dockerUser:latest
+          docker build -t ujjwal013:latest
 
       - name: Push Docker images (latest + version)
         run: |
-          docker push dockerUser:latest
+          docker push ujjwal013:latest
